@@ -358,6 +358,54 @@ initcups (void)
   INT_CONSTANT (IPP_PRINTER_PROCESSING);
   INT_CONSTANT (IPP_PRINTER_STOPPED);
 
+  // IPP errors
+  INT_CONSTANT (IPP_OK);
+  INT_CONSTANT (IPP_OK_SUBST);
+  INT_CONSTANT (IPP_OK_CONFLICT);
+  INT_CONSTANT (IPP_OK_IGNORED_SUBSCRIPTIONS);
+  INT_CONSTANT (IPP_OK_IGNORED_NOTIFICATIONS);
+  INT_CONSTANT (IPP_OK_TOO_MANY_EVENTS);
+  INT_CONSTANT (IPP_OK_BUT_CANCEL_SUBSCRIPTION);
+#ifdef HAVE_CUPS_1_2
+  INT_CONSTANT (IPP_OK_EVENTS_COMPLETE);
+#endif /* HAVE_CUPS_1_2 */
+  INT_CONSTANT (IPP_REDIRECTION_OTHER_SITE);
+  INT_CONSTANT (IPP_BAD_REQUEST);
+  INT_CONSTANT (IPP_FORBIDDEN);
+  INT_CONSTANT (IPP_NOT_AUTHENTICATED);
+  INT_CONSTANT (IPP_NOT_AUTHORIZED);
+  INT_CONSTANT (IPP_NOT_POSSIBLE);
+  INT_CONSTANT (IPP_TIMEOUT);
+  INT_CONSTANT (IPP_NOT_FOUND);
+  INT_CONSTANT (IPP_GONE);
+  INT_CONSTANT (IPP_REQUEST_ENTITY);
+  INT_CONSTANT (IPP_REQUEST_VALUE);
+  INT_CONSTANT (IPP_DOCUMENT_FORMAT);
+  INT_CONSTANT (IPP_ATTRIBUTES);
+  INT_CONSTANT (IPP_URI_SCHEME);
+  INT_CONSTANT (IPP_CHARSET);
+  INT_CONSTANT (IPP_CONFLICT);
+  INT_CONSTANT (IPP_COMPRESSION_NOT_SUPPORTED);
+  INT_CONSTANT (IPP_COMPRESSION_ERROR);
+  INT_CONSTANT (IPP_DOCUMENT_FORMAT_ERROR);
+  INT_CONSTANT (IPP_DOCUMENT_ACCESS_ERROR);
+  INT_CONSTANT (IPP_ATTRIBUTES_NOT_SETTABLE);
+  INT_CONSTANT (IPP_IGNORED_ALL_SUBSCRIPTIONS);
+  INT_CONSTANT (IPP_TOO_MANY_SUBSCRIPTIONS);
+  INT_CONSTANT (IPP_IGNORED_ALL_NOTIFICATIONS);
+  INT_CONSTANT (IPP_PRINT_SUPPORT_FILE_NOT_FOUND);
+  INT_CONSTANT (IPP_INTERNAL_ERROR);
+  INT_CONSTANT (IPP_OPERATION_NOT_SUPPORTED);
+  INT_CONSTANT (IPP_SERVICE_UNAVAILABLE);
+  INT_CONSTANT (IPP_VERSION_NOT_SUPPORTED);
+  INT_CONSTANT (IPP_DEVICE_ERROR);
+  INT_CONSTANT (IPP_TEMPORARY_ERROR);
+  INT_CONSTANT (IPP_NOT_ACCEPTING);
+  INT_CONSTANT (IPP_PRINTER_BUSY);
+  INT_CONSTANT (IPP_ERROR_JOB_CANCELLED);
+  INT_CONSTANT (IPP_MULTIPLE_JOBS_NOT_SUPPORTED);
+  INT_CONSTANT (IPP_PRINTER_IS_DEACTIVATED);
+
   // Exceptions
   HTTPError = PyErr_NewException ("cups.HTTPError", NULL, NULL);
   if (HTTPError == NULL)
